@@ -487,6 +487,7 @@ class CreateFile extends CreateTableFields
         //$date             = date('D Y-m-d H:i:s');
         if (null === $noPhpFile) {
             $ret = "<?php";
+            $ret .= "\n\ndeclare(strict_types=1);\n";
         } elseif (\is_string($noPhpFile)) {
             $ret = $noPhpFile;
         } else {
