@@ -14,9 +14,15 @@
  * @author          Michael Beck (aka Mamba)
  */
 
+use Xmf\Database\TableLoad;
+use Xmf\Module\Helper;
+use Xmf\Request;
+use Xmf\Yaml;
 use XoopsModules\Modulebuilder;
-use XoopsModules\Modulebuilder\Common;
-use XoopsModules\Modulebuilder\Utility;
+use XoopsModules\Modulebuilder\{
+    Common,
+    Utility
+};
 
 require_once dirname(__DIR__, 3) . '/include/cp_header.php';
 require \dirname(__DIR__) . '/preloads/autoloader.php';
@@ -49,29 +55,35 @@ switch ($op) {
 }
 
 // XMF TableLoad for SAMPLE data
-
 function loadSampleData()
 {
     global $xoopsConfig;
 
-    $moduleDirName = \basename(\dirname(__DIR__));
+    $moduleDirName      = \basename(\dirname(__DIR__));
     $moduleDirNameUpper = \mb_strtoupper($moduleDirName);
 
     $utility      = new Modulebuilder\Utility();
     $configurator = new Common\Configurator();
 
-    $tables = \Xmf\Module\Helper::getHelper($moduleDirName)->getModule()->getInfo('tables');
+    $tables = Helper::getHelper($moduleDirName)->getModule()->getInfo('tables');
 
     $language = 'english/';
     if (\is_dir(__DIR__ . '/' . $xoopsConfig['language'])) {
         $language = $xoopsConfig['language'] . '/';
     }
 
+    // load module tables
     foreach ($tables as $table) {
-        $tabledata = \Xmf\Yaml::readWrapped($language . $table . '.yml');
-        \Xmf\Database\TableLoad::truncateTable($table);
-        \Xmf\Database\TableLoad::loadTableFromArray($table, $tabledata);
+        $tabledata = Yaml::readWrapped($language . $table . '.yml');
+        TableLoad::truncateTable($table);
+        TableLoad::loadTableFromArray($table, $tabledata);
     }
+
+    // load permissions
+    $table     = 'group_permission';
+    $tabledata = Yaml::readWrapped($language . $table . '.yml');
+    $mid       = Helper::getHelper($moduleDirName)->getModule()->getVar('mid');
+    loadTableFromArrayWithReplace($table, $tabledata, 'gperm_modid', $mid);
 
     //  ---  COPY test folder files ---------------
     if (\is_array($configurator->copyTestFolders) && \count($configurator->copyTestFolders) > 0) {
@@ -91,10 +103,10 @@ function saveSampleData()
 
     $configurator = new Common\Configurator();
 
-    $moduleDirName = \basename(\dirname(__DIR__));
+    $moduleDirName      = \basename(\dirname(__DIR__));
     $moduleDirNameUpper = \mb_strtoupper($moduleDirName);
 
-    $tables = \Xmf\Module\Helper::getHelper($moduleDirName)->getModule()->getInfo('tables');
+    $tables = Helper::getHelper($moduleDirName)->getModule()->getInfo('tables');
 
     $languageFolder = __DIR__ . '/' . $xoopsConfig['language'];
     if (!\file_exists($languageFolder . '/')) {
@@ -103,9 +115,17 @@ function saveSampleData()
     $exportFolder = $languageFolder . '/Exports-' . date('Y-m-d-H-i-s') . '/';
     Utility::createFolder($exportFolder);
 
+    // save module tables
     foreach ($tables as $table) {
-        \Xmf\Database\TableLoad::saveTableToYamlFile($table, $exportFolder . $table . '.yml');
+        TableLoad::saveTableToYamlFile($table, $exportFolder . $table . '.yml');
     }
+
+    // save permissions
+    $criteria = new \CriteriaCompo();
+    $criteria->add(new \Criteria('gperm_modid', Helper::getHelper($moduleDirName)->getModule()->getVar('mid')));
+    $skipColumns[] = 'gperm_id';
+    TableLoad::saveTableToYamlFile('group_permission', $exportFolder . 'group_permission.yml', $criteria, $skipColumns);
+    unset($criteria);
 
     //  ---  COPY test folder files ---------------
     if (\is_array($configurator->copyTestFolders) && \count($configurator->copyTestFolders) > 0) {
@@ -129,9 +149,56 @@ function exportSchema()
         //        $migrate->saveCurrentSchema();
         //
         //        \redirect_header('../admin/index.php', 1, \constant('CO_' . $moduleDirNameUpper . '_' . 'EXPORT_SCHEMA_SUCCESS'));
-    }
-    catch (\Exception $e) {
+    } catch (\Exception $e) {
         exit(\constant('CO_' . $moduleDirNameUpper . '_' . 'EXPORT_SCHEMA_ERROR'));
     }
 
+}
+
+/**
+ * loadTableFromArrayWithReplace
+ *
+ * @param string $table  value with should be used insead of original value of $search
+ *
+ * @param array  $data   array of rows to insert
+ *                       Each element of the outer array represents a single table row.
+ *                       Each row is an associative array in 'column' => 'value' format.
+ * @param string $search name of column for which the value should be replaced
+ * @param        $replace
+ * @return int number of rows inserted
+ */
+function loadTableFromArrayWithReplace($table, $data, $search, $replace)
+{
+    /** @var \XoopsDatabase */
+    $db = \XoopsDatabaseFactory::getDatabaseConnection();
+    $prefixedTable = $db->prefix($table);
+    $count = 0;
+    $sql = 'DELETE FROM ' . $prefixedTable . ' WHERE `' . $search . '`=' . $db->quote($replace);
+    $db->queryF($sql);
+    foreach ($data as $row) {
+        $insertInto = 'INSERT INTO ' . $prefixedTable . ' (';
+        $valueClause = ' VALUES (';
+        $first = true;
+        foreach ($row as $column => $value) {
+            if ($first) {
+                $first = false;
+            } else {
+                $insertInto .= ', ';
+                $valueClause .= ', ';
+            }
+            $insertInto .= $column;
+            if ($search === $column) {
+                $valueClause .= $db->quote($replace);
+            } else {
+                $valueClause .= $db->quote($value);
+            }
+        }
+        $sql = $insertInto . ') ' . $valueClause . ')';
+        $result = $db->queryF($sql);
+        if (false !== $result) {
+            ++$count;
+        }
+    }
+
+    return $count;
 }
