@@ -3,6 +3,7 @@
  - fixed bug with l\trim (alain/goffy)
  - implemented additional prebuilding check  (goffy)
  - cosmetics (mamba/goffy)
+ - added "declare(strict_types=1);" to php file creation (goffy)
 
 <h5>3.04 Final   [2020-11-11]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
